# cryptobox

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cryptobox.cpp  cryptobox.hpp  main.cpp
